--- a/src/config/sbt.properties
+++ b/src/config/sbt.properties
@@ -198,3 +198,11 @@ mail.debug=true
 sample.activityNodeId=3659d077-aa0c-4f30-ae75-45a57387248d
 sample.sectionId=urn:lsid:ibm.com:oa:246ebc61-0240-4f5c-aac2-81887d1eae2e
 sample.activityId=44475909-9d28-4411-9edb-a0b3dd084f86
+
+#JAGGR properties
+baseUrl=file:///C:/JAGGR9/com.ibm.sbt.sample.web/WebContent
+dojoPath=file:///C:/Users/IBM_ADMIN/git9/JavascriptAggregator/jaggr-sample-dojo/WebContent/source_1.8.0-20120830-IBM_dojo
+#dojoPath=jar:file:///C:/Users/IBM_ADMIN/Desktop/jaggr-dojo.war!
+sdkPath=file:///C:/JAGGR9/com.ibm.sbt.web/WebContent/js/sdk
+loaderExtensionPath=file://C:/JAGGR9/com.ibm.sbt.sample.web/WebContent/js/dojo
+
